contracts/credit/tests/snapshots/risk_gas_snap__get_borrower_rate_floor_none.snap
---
source: contracts/credit/tests/risk_gas_snap.rs
expression: sample
---
RiskGasSample {
    entrypoint: "get_borrower_rate_floor_none",
    cpu_instructions: 33014,
    memory_bytes: 5647,
}
