contracts/credit/tests/snapshots/risk_gas_snap__get_rate_change_limits_some.snap
---
source: contracts/credit/tests/risk_gas_snap.rs
expression: sample
---
RiskGasSample {
    entrypoint: "get_rate_change_limits_some",
    cpu_instructions: 57915,
    memory_bytes: 8444,
}
