contracts/credit/tests/snapshots/risk_gas_snap__get_rate_formula_config_none.snap
---
source: contracts/credit/tests/risk_gas_snap.rs
expression: sample
---
RiskGasSample {
    entrypoint: "get_rate_formula_config_none",
    cpu_instructions: 46006,
    memory_bytes: 6608,
}
